base/slack-inviter-endpoint.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: slack-inviter
  namespace: community-slack
addressType: FQDN
ports:
  - name: https
    protocol: TCP
    appProtocol: https
    port: 443
endpoints:
  - addresses:
      - "inviter.co"
    conditions:
      ready: true
