base/slack-inviter-datum-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: slack-inviter-gateway
  namespace: community-slack
spec:
  gatewayClassName: datum-external-global-proxy
  listeners:
  - allowedRoutes:
      namespaces:
        from: Same
    hostname: replace.me
    name: https
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      options:
        gateway.networking.datumapis.com/certificate-issuer: auto
  - allowedRoutes:
      namespaces:
        from: Same
    hostname: replace.me
    name: http
    port: 80
    protocol: HTTP
