base/slack-inviter-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: slack-inviter-route
  namespace: community-slack
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: slack-inviter-gateway
  rules:
  - matches:
    - path:
        type: Exact
        value: /
    filters:
      - type: RequestRedirect
        requestRedirect:
          path:
            type: ReplaceFullPath
            replaceFullPath: /datum
          statusCode: 302
  - matches:
    - path:
        type: PathPrefix
        value: /
    filters:
    - type: URLRewrite
      urlRewrite:
        hostname: inviter.co
    backendRefs:
    - group: discovery.k8s.io
      kind: EndpointSlice
      name: slack-inviter
      port: 443
